<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NYAS-App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_content_placeholder"> Home page content goes here </string>
    <string name="title_activity_start">StartActivity</string>
    <string name="accessibility_string"> Accessibility </string>
    <string name="text_only_string"> Text Only</string>
    <string name="profile_content_placeholder"> User profile content goes here </string>
    <string name="enter_pin_string"> Please enter your 4 Digit pin </string>
    <string name="set_pin_string"> Please enter a 4 Digit pin to secure your user profile</string>
    <string name="home_page_info"> Navigation bar will be on every page. Home page icon used for the home page</string>
    <string name="info_page_info"> I icon used for all the information, so on this page will be all the charity and the services they offer</string>
    <string name="contact_page_info"> Message icon will be the contact page which will have the option for the call back.</string>
    <string name="profile_page_info"> User profile page will ask the user to log in to see personal information</string>
    <string name="ok"> OK! </string>
    <string name="cancel"> Cancel </string>
    <string name="select_date_string">Select Date</string>
    <string name="select_a_date_string">Select A Date</string>
    <string name="select_tine_string">Select Time</string>
    <string name="select_a_time_string">Select A Time</string>
    <string name="submit_string">Submit</string>
    <string name="back_string">Back</string>
    <string name="view_appointments">View Appointments</string>
    <string name="edit_profile_string">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="feedback_title"> Please rate your user experience out of 5 </string>
    <string name="send_string">Send</string>
    <string name="enter_message_string">Enter Message To Send</string>
    <string name="contact_title"> How to contact NYAS? </string>
    <string name="contact_information">
        If you are not sure who you need to speak with please ring Head Office on 0151 649 8700 or email main@nyas.net \n

        Telephone: 0151 649 8700 \n
        Email: info@nyas.net \n
        Monday to Friday 9:00 am – 5:00pm \n
        \n
        Messages can be left at all other times and will be responded to quickly \n
        If you are in need of support call our Helpline \n
        Helpline: 0808 808 1001 \n
        \n
        Email: help@nyas.net \n
        Weekdays 8:00 am – 8:00pm, Saturday 10:00am – 4:00pm \n
        Messages can be left at all other times and will be responded to quickly \n
        Head Office Telephone: 0151 649 8700 \n
        Head Office Fax: 0151 649 8701 \n
        Email: main@nyas.net \n
        \n
        NYAS, \n
        Egerton House, \n
        Tower Road, \n
        Birkenhead, \n
        Wirral, \n
        CH41 1FN</string>
    <string name="make_appointment_string">Make Appointment</string>
    <string name="first_information_string">This page contains information about what NYAS offers children and vulnerable adults services including</string>
    <string name="second_information_string">Rights, responsibilities and entitlements.</string>
    <string name="third_information_string">Children and vulnerable adult services</string>
    <string name="forth_information_string">Meeting information</string>
    <string name="welcome_to_app_string">Welcome to the NYAS interactive app</string>
    <string name="navigation_string">Use the buttons below to navigate around the app</string>

</resources>
